@@ -17,7 +17,7 @@
 // along with DOLFIN.  If not, see <http://www.gnu.org/licenses/>.
 //
 // First added:  2009-12-10
-// Last changed: 2010-08-11
+// Last changed: 2011-05-22
 
 //=============================================================================
 // In this file we declare some typemaps for the dolfin::Array type
@@ -30,7 +30,7 @@
 // TYPECHECK  : The SWIG specific name of the type used in the array type checks values
 //              SWIG use: INT32 for integer, DOUBLE for double aso.
 // NUMPYTYPE  : The NumPy type that is going to be checked for
-// TYPENAME   : The name of the pointer type, 'double' for 'double', 'uint' for
+// TYPE_NAME  : The name of the pointer type, 'double' for 'double', 'uint' for
 //              'dolfin::uint'
 // DESCR      : The char descriptor of the NumPy type
 // ARGNAME    : The name of the argument the typemap will kick in for pass nothing
@@ -38,20 +38,12 @@
 // CONSTARRAY : If the dolfin::Array is of type const, then pass const for this
 //              argument
 //-----------------------------------------------------------------------------
-%define IN_NUMPY_TYPEMAP_FOR_DOLFIN_ARRAY(TYPE, TYPECHECK, NUMPYTYPE, TYPENAME, DESCR, ARGNAME, CONSTARRAY)
+%define IN_NUMPY_TYPEMAP_FOR_DOLFIN_ARRAY(TYPE, TYPECHECK, NUMPYTYPE, TYPE_NAME, DESCR, ARGNAME, CONSTARRAY)
 
-%typemap(in) CONSTARRAY dolfin::Array<TYPE> &ARGNAME{
-  // Check input object
-  if (!PyArray_Check($input))
-    SWIG_exception(SWIG_TypeError, "numpy array of 'TYPENAME' expected for the $argnum argument. Make sure that the numpy array use dtype='DESCR'.");
-
-  PyArrayObject *xa = reinterpret_cast<PyArrayObject*>($input);
-  if (PyArray_TYPE(xa) != NUMPYTYPE )
-    SWIG_exception(SWIG_TypeError, "numpy array of 'TYPENAME' expected for the $argnum argument. Make sure that the numpy array use dtype='DESCR'.");
-
-  dolfin::uint size = PyArray_DIM(xa, 0);
-  TYPE* data = static_cast<TYPE*>(PyArray_DATA(xa));
-
+%typemap(in, fragment=convert_numpy_to_array_with_check(TYPE_NAME)) (CONSTARRAY dolfin::Array<TYPE> &ARGNAME) (dolfin::uint size, TYPE* data)
+{
+  if (!convert_numpy_to_array_with_check_ ## TYPE_NAME($input, size, data))
+    return NULL;
   $1 = new dolfin::Array<TYPE>(size, data);
 }
 
